# sqlite2pg

./: .gitignore  README.md  noxfile.py  pyproject.toml
sqlite2pg/: __init__.py  __main__.py  cli.py  config.py  worker.py
sqlite2pg/commands/: config.py  migrate.py  schema.py
sqlite2pg/modules/: __init__.py  config.py  errors.py  logging.py  sqlite.py  worker.py
tests/: test_metadata.py
