[tool.poetry]
name = "sqlite2pg"
version = "0.1.3"
description = "An SQLite3 to PostgreSQL database migration tool."
license = "BSD-3-Clause"
homepage = "https://github.com/Jonxslays/sqlite2pg"
repository = "https://github.com/Jonxslays/sqlite2pg"
authors = ["Jonxslays"]
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Database",
    "Typing :: Typed",
]

[tool.poetry.scripts]
sqlite2pg = "sqlite2pg.cli:main"

[tool.poetry.dependencies]
python = ">=3.6.2,<=3.10"
aiofiles = "^0.7.0"
aiosqlite = "^0.17.0"
asyncpg = "^0.24.0"
click = "^8.0.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
mypy = "^0.910"
nox = "^2021.6.12"
pytest = "^6.2.5"
types-aiofiles = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
